# esp-hub75

./: .cursorrules  .gitignore  CHANGELOG.md  Cargo.toml  DANIEL.md  README.md  build-all.sh  build.rs  release.toml  rustfmt.toml
.cursor/: rules.yaml
.github/workflows/: ci.yml
bs/: latched.bs
examples/: checkerboard_i2s_parallel.rs  esp32-trinity.rs  gpio.rs  hello_i2s_parallel.rs  hello_lcd_cam.rs  hello_lcd_cam_idf.rs  hello_lcd_cam_p4_idf.rs  hello_parl_io.rs  i2s_parallel.rs  i2s_parallel_bp.rs  i2s_parallel_bp_latch.rs  i2s_parallel_bs_latch.rs  i2s_parallel_dimming.rs  i2s_parallel_latch.rs  lcd_cam.rs  lcd_cam_bp.rs  lcd_cam_bp_latch.rs  lcd_cam_bs_latch.rs  lcd_cam_latch.rs  lcd_cam_tiled.rs  parl_io.rs  parl_io_bp.rs  parl_io_bp_isr.rs  parl_io_bp_latch.rs  parl_io_bp_latch_isr.rs  parl_io_bs_latch.rs  parl_io_latch.rs  parl_io_latch_isr.rs  rustacean_i2s.rs  rustacean_lcd_cam.rs  rustacean_parl_io.rs  rustacean_parl_io_isr.rs
src/: bcm_buf.rs  bcm_dma_buf.rs  fb_latched.rs  framebuffer.rs  gpio.rs  i2s_parallel.rs  i2s_parallel_latch.rs  isr.rs  lcd_cam.rs  lcd_cam_idf.rs  lcd_cam_latch.rs  lib.rs  parl_io.rs  parl_io_isr.rs
src/framebuffer/: latched.rs  mod.rs  plain.rs
