[package]
name = "esp-hub75"
edition = "2021"
version = "0.1.0"
authors = ["liebman <liebman@zod.com>"]
license = "MIT OR Apache-2.0"
rust-version = "1.71"

[dependencies]
bitfield = { version = "0.17.0" }
cfg-if = "1.0.0"
critical-section = { version = "1.2.0" }
defmt = { version = "0.3.8", optional = true }
embedded-graphics = { version = "0.8.1" }
embedded-hal = { version = "1.0.0" }
embedded-hal-async = { version = "1.0.0" }
esp-hal = { version = "0.23.1", features = ["unstable"] }
fugit = { version = "0.3.7" }
log = { version = "0.4.22", optional = true }
static_cell = { version = "2.1", features = ["nightly"] }

[build-dependencies]
esp-build = "0.2.0"

[dev-dependencies]
defmt-rtt = { version = "0.4.1" }
embassy-embedded-hal = { version = "0.3.0" }
embassy-executor = { version = "0.7.0" }
embassy-futures = { version = "0.1.1" }
embassy-sync = { version = "0.6.2" }
embassy-time = { version = "0.4.0", features = [] }
esp-backtrace = { version = "0.15.0", features = [
    "panic-handler",
    "exception-handler",
] }
esp-println = { version = "0.13.0" }
esp-hal-embassy = { version = "0.6.0" }
heapless = { version = "0.8.0", features = ["ufmt"] }

[features]
default = []
esp32 = [
    "esp-hal/esp32",
    "esp-backtrace/esp32",
    "esp-hal-embassy/esp32",
    "esp-println/esp32",
]
esp32s3 = [
    "esp-hal/esp32s3",
    "esp-backtrace/esp32s3",
    "esp-hal-embassy/esp32s3",
    "esp-println/esp32s3",
]
esp32c6 = [
    "esp-hal/esp32c6",
    "esp-backtrace/esp32c6",
    "esp-hal-embassy/esp32c6",
    "esp-println/esp32c6",
]
debug = ["esp-hal/debug"]
defmt = [
    "dep:defmt",
    "esp-backtrace/defmt",
    "esp-hal/defmt",
    "fugit/defmt"
]
log = [
    "dep:log",
    "esp-backtrace/println",
    "esp-hal/log",
    "esp-println/auto",
    "esp-println/log",
    "esp-println/colors",
]
valid-pin = [] # only for parl_io debugging

[patch.crates-io]
esp-backtrace    = { path = "../esp-hal-next/esp-backtrace" }
esp-build        = { path = "../esp-hal-next/esp-build" }
esp-hal          = { path = "../esp-hal-next/esp-hal" }
esp-hal-embassy  = { path = "../esp-hal-next/esp-hal-embassy" }
esp-println      = { path = "../esp-hal-next/esp-println" }
esp-riscv-rt     = { path = "../esp-hal-next/esp-riscv-rt" }
xtensa-lx-rt     = { path = "../esp-hal-next/xtensa-lx-rt" }
