[package]
name = "esp-hub75"
edition = "2021"
version = "0.1.0"
authors = ["liebman <liebman@zod.com>"]
license = "MIT OR Apache-2.0"
rust-version = "1.71"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "s"

[profile.release]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "s"

[dependencies]
bitfield = { version = "0.17.0" }
cfg-if = "1.0.0"
critical-section = { version = "1.2.0" }
defmt = { version = "0.3.8", optional = true }
embedded-graphics = { version = "0.8.1" }
embedded-hal = { version = "1.0.0" }
embedded-hal-async = { version = "1.0.0" }
esp-hal = { version = "1.0.0-beta.0", features = ["unstable"] }
log = { version = "0.4.22", optional = true }
static_cell = { version = "2.1", features = ["nightly"] }

[build-dependencies]
esp-build = "0.2.0"

[dev-dependencies]
defmt-rtt = { version = "0.4.1" }
embassy-embedded-hal = { version = "0.3.0" }
embassy-executor = { version = "0.7.0" }
embassy-futures = { version = "0.1.1" }
embassy-sync = { version = "0.6.2" }
embassy-time = { version = "0.4.0", features = [] }
esp-backtrace = { version = "0.15.1", features = [
    "panic-handler",
    "exception-handler",
] }
esp-println = { version = "0.13.1" }
esp-hal-embassy = { version = "0.7.0" }
heapless = { version = "0.8.0", features = ["ufmt"] }

[features]
default = []
esp32 = [
    "esp-hal/esp32",
    "esp-backtrace/esp32",
    "esp-hal-embassy/esp32",
    "esp-println/esp32",
]
esp32s3 = [
    "esp-hal/esp32s3",
    "esp-backtrace/esp32s3",
    "esp-hal-embassy/esp32s3",
    "esp-println/esp32s3",
]
esp32c6 = [
    "esp-hal/esp32c6",
    "esp-backtrace/esp32c6",
    "esp-hal-embassy/esp32c6",
    "esp-println/esp32c6",
]
debug = ["esp-hal/debug"]
defmt = ["dep:defmt", "esp-backtrace/defmt", "esp-hal/defmt"]
log = [
    "dep:log",
    "esp-backtrace/println",
    "esp-hal/log",
    "esp-println/auto",
    "esp-println/log",
    "esp-println/colors",
]
invert-blank = [] # only for some latched implementations
valid-pin = [] # only for parl_io debugging

[patch.crates-io]
esp-backtrace    = { git = "https://github.com/esp-rs/esp-hal.git" }
esp-build        = { git = "https://github.com/esp-rs/esp-hal.git" }
esp-hal          = { git = "https://github.com/esp-rs/esp-hal.git" }
esp-hal-embassy  = { git = "https://github.com/esp-rs/esp-hal.git" }
esp-println      = { git = "https://github.com/esp-rs/esp-hal.git" }
esp-riscv-rt     = { git = "https://github.com/esp-rs/esp-hal.git" }
xtensa-lx-rt     = { git = "https://github.com/esp-rs/esp-hal.git" }

# esp-backtrace = { path = "../esp-hal/esp-backtrace" }
# esp-build = { path = "../esp-hal/esp-build" }
# esp-hal = { path = "../esp-hal/esp-hal" }
# esp-hal-embassy = { path = "../esp-hal/esp-hal-embassy" }
# esp-println = { path = "../esp-hal/esp-println" }
# esp-riscv-rt = { path = "../esp-hal/esp-riscv-rt" }
# xtensa-lx-rt = { path = "../esp-hal/xtensa-lx-rt" }
